fix start failure; refactoring