@@ -35,3 +35,6 @@ tasks.withType(JavaCompile) {
 tasks.withType(Test) {
 	jvmArgs += "--enable-preview"
 }
+tasks.withType(JavaExec) {
+	jvmArgs += '--enable-preview'
+}
